TMLR and published info

--- a/pubs.html
+++ b/pubs.html
@@ -327,6 +327,26 @@ ICLR. Accepted. 2025 [<a
 href="https://openreview.net/forum?id=X2x2DuGIbx">publisher link</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('liu2025multilevel.bib', 'bibtex-liu2025multilevel')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-rekavandi24rsreg">
+@article{rekavandi24rsreg,
+  title = {{RS-Reg}: {P}robabilistic and Robust Certified Regression Through Randomized Smoothing},
+  author = {Aref Miri Rekavandi and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  journal = {Transactions on Machine Learning Research},
+  note = {Accepted},
+  year = {2025},
+}
+</code></pre></div>
+
+<ul>
+<li>Rekavandi, Aref Miri, Olga Ohrimenko, and Benjamin I. P. Rubinstein.
+“RS-Reg: Probabilistic and Robust Certified Regression Through
+Randomized Smoothing”. In: <em>Transactions on Machine Learning
+Research</em> (2025). Accepted. [<a
+href="https://arxiv.org/abs/2405.08892">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('rekavandi24rsreg.bib', 'bibtex-rekavandi24rsreg')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2024</h3>
@@ -516,9 +536,9 @@ link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('jin2024getting.bi
 <pre><code id="bibtex-joukhadar2024designing">
 @inproceedings{joukhadar2024designing,
   author = {Zaher Joukhadar and Jonathan Morgan and Christopher Bayliss and Miguel {Ortiz del Castillo} and Jack McRobbie and Robert Mearns and Krista A. Ehinger and Benjamin I. P. Rubinstein and Richard Sinnott and Michele Trenti and James Bailey},
-  title = {Designing an Adaptive {AI} System for Operation on Board a Nano-satellite},
+  title = {Designing an Adaptive {AI} System for Operation on Board the {SpIRIT} Nano-Satellite},
   year = {2024},
-  note = {In press},
+  pages = {329--341},
   booktitle = {37th Australasian Joint Conference on Artificial Intelligence},
   series = {AJCAI},
 }
@@ -528,10 +548,11 @@ link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('jin2024getting.bi
 <li>Joukhadar, Zaher, Jonathan Morgan, Christopher Bayliss, Miguel Ortiz
 del Castillo, Jack McRobbie, Robert Mearns, Krista A. Ehinger, Benjamin
 I. P. Rubinstein, Richard Sinnott, Michele Trenti, and James Bailey.
-“Designing an Adaptive AI System for Operation on Board a
-Nano-satellite”. In: <em>37th Australasian Joint Conference on
-Artificial Intelligence</em>. AJCAI. In press. 2024
-[<a style="cursor: pointer;" onclick="DownloadToFile('joukhadar2024designing.bib', 'bibtex-joukhadar2024designing')">BibTeX</a>]</li>
+“Designing an Adaptive AI System for Operation on Board the SpIRIT
+Nano-Satellite”. In: <em>37th Australasian Joint Conference on
+Artificial Intelligence</em>. AJCAI. 2024, pp. 329-341 [<a
+href="https://link.springer.com/book/10.1007/978-981-96-0351-0">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('joukhadar2024designing.bib', 'bibtex-joukhadar2024designing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -542,7 +563,7 @@ Artificial Intelligence</em>. AJCAI. In press. 2024
   author = {Bastian Oetomo and R. Malinga Perera and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
   booktitle = {2024 IEEE 16th International Conference on Data Mining},
   series = {ICDM},
-  note = {In press},
+  pages = {360--369},
 }
 </code></pre></div>
 
@@ -550,8 +571,9 @@ Artificial Intelligence</em>. AJCAI. In press. 2024
 <li>Oetomo, Bastian, R. Malinga Perera, Renata Borovica-Gajic, and
 Benjamin I. P. Rubinstein. “Warm-Starting Contextual Bandits under
 Latent Reward Scaling”. In: <em>2024 IEEE 16th International Conference
-on Data Mining</em>. ICDM. In press. 2024
-[<a style="cursor: pointer;" onclick="DownloadToFile('oetomo24warm.bib', 'bibtex-oetomo24warm')">BibTeX</a>]</li>
+on Data Mining</em>. ICDM. 2024, pp. 360-369 [<a
+href="https://www.computer.org/csdl/proceedings-article/icdm/2024/066800a360/24w4sJvik3S">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('oetomo24warm.bib', 'bibtex-oetomo24warm')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -590,25 +612,6 @@ Troubles: Cross-Lingual Transferability of Backdoor Attacks in LLMs with
 Instruction Tuning</em>. arXiv:2404.19597 [cs.CL]. May. 2024 [<a
 href="https://arxiv.org/abs/2404.19597">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('he2024transferring.bib', 'bibtex-he2024transferring')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-rekavandi24rsreg">
-@misc{rekavandi24rsreg,
-  title = {{RS-Reg}: {P}robabilistic and Robust Certified Regression Through Randomized Smoothing},
-  author = {Aref Miri Rekavandi and Olga Ohrimenko and Benjamin I. P. Rubinstein},
-  note = {arXiv:2405.08892 [cs.LG]},
-  year = {2024},
-  month = {May},
-}
-</code></pre></div>
-
-<ul>
-<li>Rekavandi, Aref Miri, Olga Ohrimenko, and Benjamin I. P. Rubinstein.
-<em>RS-Reg: Probabilistic and Robust Certified Regression Through
-Randomized Smoothing</em>. arXiv:2405.08892 [cs.LG]. May. 2024 [<a
-href="https://arxiv.org/abs/2405.08892">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('rekavandi24rsreg.bib', 'bibtex-rekavandi24rsreg')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-2" class="section level3">
