--- a/pubs.html
+++ b/pubs.html
@@ -307,6 +307,48 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
 <h3>2025</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-cullen2025position">
+@inproceedings{cullen2025position,
+  title = {Position: Certified Robustness Does Not (Yet) Imply Model Security},
+  author = {Andrew C. Cullen and Paul Montague and Sarah M. Erfani and Benjamin I. P. Rubinstein},
+  year = {2025},
+  booktitle = {Proceedings of the 42nd International Conference on Machine Learning},
+  series = {ICML},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Cullen, Andrew C., Paul Montague, Sarah M. Erfani, and Benjamin I.
+P. Rubinstein. “Position: Certified Robustness Does Not (Yet) Imply
+Model Security”. In: <em>Proceedings of the 42nd International
+Conference on Machine Learning</em>. ICML. Accepted. 2025 [<span
+style="color:red">Selected as Oral</span>;
+<a style="cursor: pointer;" onclick="DownloadToFile('cullen2025position.bib', 'bibtex-cullen2025position')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-cullen2025ddad">
+@inproceedings{cullen2025ddad,
+  title = {{DDAD}: A Two-Pronged Adversarial Defense Based on Distributional Discrepancy},
+  author = {Jiacheng Zhang and Benjamin I. P. Rubinstein and Jingfeng Zhang and Feng Liu},
+  year = {2025},
+  booktitle = {Proceedings of the 42nd International Conference on Machine Learning},
+  series = {ICML},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Zhang, Jiacheng, Benjamin I. P. Rubinstein, Jingfeng Zhang, and Feng
+Liu. “DDAD: A Two-Pronged Adversarial Defense Based on Distributional
+Discrepancy”. In: <em>Proceedings of the 42nd International Conference
+on Machine Learning</em>. ICML. Accepted. 2025 [<a
+href="https://arxiv.org/abs/2503.02169">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('cullen2025ddad.bib', 'bibtex-cullen2025ddad')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-liu2025multilevel">
 @inproceedings{liu2025multilevel,
   author = {Shijie Liu and Andrew C. Cullen and Paul Montague and Sarah M. Erfani and Benjamin I. P. Rubinstein},
