--- a/pubs.html
+++ b/pubs.html
@@ -389,6 +389,25 @@ Research</em> (2025). Accepted. [<a
 href="https://arxiv.org/abs/2405.08892">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('rekavandi24rsreg.bib', 'bibtex-rekavandi24rsreg')">BibTeX</a>]</li>
 </ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-he2025tuba">
+@inproceedings{he2025tuba,
+  title = {{TUBA}: Cross-Lingual Transferability of Backdoor Attacks in {LLMs} with Instruction Tuning},
+  author = {Xuanli He and Jun Wang and Qiongkai Xu and Pasquale Minervini and Pontus Stenetorp and Benjamin I. P. Rubinstein and Trevor Cohn},
+  year = {2025},
+  booktitle = {Findings of the Association for Computational Linguistics: ACL 2025},
+}
+</code></pre></div>
+
+<ul>
+<li>He, Xuanli, Jun Wang, Qiongkai Xu, Pasquale Minervini, Pontus
+Stenetorp, Benjamin I. P. Rubinstein, and Trevor Cohn. “TUBA:
+Cross-Lingual Transferability of Backdoor Attacks in LLMs with
+Instruction Tuning”. In: <em>Findings of the Association for
+Computational Linguistics: ACL 2025</em>. 2025
+[<a style="cursor: pointer;" onclick="DownloadToFile('he2025tuba.bib', 'bibtex-he2025tuba')">BibTeX</a>]</li>
+</ul>
 </div>
 <div id="section-1" class="section level3">
 <h3>2024</h3>
