--- a/pubs.html
+++ b/pubs.html
@@ -330,7 +330,7 @@ style="color:red">Selected as Oral</span>;
 <div class="bibox" style="display: none;">
 <pre><code id="bibtex-cullen2025ddad">
 @inproceedings{cullen2025ddad,
-  title = {{DDAD}: A Two-Pronged Adversarial Defense Based on Distributional Discrepancy},
+  title = {One Stone, Two Birds: Enhancing Adversarial Defense Through the Lens of Distributional Discrepancy},
   author = {Jiacheng Zhang and Benjamin I. P. Rubinstein and Jingfeng Zhang and Feng Liu},
   year = {2025},
   booktitle = {Proceedings of the 42nd International Conference on Machine Learning},
@@ -341,10 +341,10 @@ style="color:red">Selected as Oral</span>;
 
 <ul>
 <li>Zhang, Jiacheng, Benjamin I. P. Rubinstein, Jingfeng Zhang, and Feng
-Liu. “DDAD: A Two-Pronged Adversarial Defense Based on Distributional
-Discrepancy”. In: <em>Proceedings of the 42nd International Conference
-on Machine Learning</em>. ICML. Accepted. 2025 [<a
-href="https://arxiv.org/abs/2503.02169">PDF</a>;
+Liu. “One Stone, Two Birds: Enhancing Adversarial Defense Through the
+Lens of Distributional Discrepancy”. In: <em>Proceedings of the 42nd
+International Conference on Machine Learning</em>. ICML. Accepted. 2025
+[<a href="https://arxiv.org/abs/2503.02169">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('cullen2025ddad.bib', 'bibtex-cullen2025ddad')">BibTeX</a>]</li>
 </ul>
 
