--- a/pubs.html
+++ b/pubs.html
@@ -307,6 +307,45 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
 <h3>2025</h3>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2025adaptive">
+@inproceedings{marchant2025adaptive,
+  title = {Adaptive Data Analysis for Growing Data},
+  author = {Neil G. Marchant and Benjamin I. P. Rubinstein},
+  year = {2025},
+  booktitle = {Advances in Neural Information Processing Systems},
+  series = {NeurIPS},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. “Adaptive Data
+Analysis for Growing Data”. In: <em>Advances in Neural Information
+Processing Systems</em>. NeurIPS. Accepted. 2025 [<a
+href="https://arxiv.org/abs/2405.13375">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('marchant2025adaptive.bib', 'bibtex-marchant2025adaptive')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-huang2025adaptdel">
+@inproceedings{huang2025adaptdel,
+  author = {Zhuoqun Huang and Neil G. Marchant and Olga Ohrimenko and Benjamin I. P. Rubinstein},
+  title = {{AdaptDel}: Adaptable Deletion Rate Randomized Smoothing for Certified Robustness},
+  year = {2025},
+  booktitle = {Advances in Neural Information Processing Systems},
+  series = {NeurIPS},
+  note = {Accepted},
+}
+</code></pre></div>
+
+<ul>
+<li>Huang, Zhuoqun, Neil G. Marchant, Olga Ohrimenko, and Benjamin I. P.
+Rubinstein. “AdaptDel: Adaptable Deletion Rate Randomized Smoothing for
+Certified Robustness”. In: <em>Advances in Neural Information Processing
+Systems</em>. NeurIPS. Accepted. 2025 [<a style="cursor: pointer;" onclick="DownloadToFile('huang2025adaptdel.bib', 'bibtex-huang2025adaptdel')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-cullen2025position">
 @inproceedings{cullen2025position,
   title = {Position: Certified Robustness Does Not (Yet) Imply Model Security},
@@ -635,24 +674,6 @@ Latent Reward Scaling”. In: <em>2024 IEEE 16th International Conference
 on Data Mining</em>. ICDM. 2024, pp. 360-369 [<a
 href="https://www.computer.org/csdl/proceedings-article/icdm/2024/066800a360/24w4sJvik3S">publisher
 link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('oetomo24warm.bib', 'bibtex-oetomo24warm')">BibTeX</a>]</li>
-</ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-marchant2024adaptive">
-@misc{marchant2024adaptive,
-  title = {Adaptive Data Analysis for Growing Data},
-  author = {Neil G. Marchant and Benjamin I. P. Rubinstein},
-  note = {arXiv:2405.13375 [cs.CL]},
-  year = {2024},
-  month = {May},
-}
-</code></pre></div>
-
-<ul>
-<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>Adaptive Data
-Analysis for Growing Data</em>. arXiv:2405.13375 [cs.CL]. May. 2024 [<a
-href="https://arxiv.org/abs/2405.13375">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('marchant2024adaptive.bib', 'bibtex-marchant2024adaptive')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
