arXiv fuzzing, updating published papers

--- a/pubs.html
+++ b/pubs.html
@@ -353,7 +353,7 @@ Systems</em>. NeurIPS. Accepted. 2025 [<a style="cursor: pointer;" onclick="Down
   year = {2025},
   booktitle = {Proceedings of the 42nd International Conference on Machine Learning},
   series = {ICML},
-  note = {Accepted},
+  pages = {81185--81198},
 }
 </code></pre></div>
 
@@ -361,20 +361,23 @@ Systems</em>. NeurIPS. Accepted. 2025 [<a style="cursor: pointer;" onclick="Down
 <li>Cullen, Andrew C., Paul Montague, Sarah M. Erfani, and Benjamin I.
 P. Rubinstein. “Position: Certified Robustness Does Not (Yet) Imply
 Model Security”. In: <em>Proceedings of the 42nd International
-Conference on Machine Learning</em>. ICML. Accepted. 2025 [<span
-style="color:red">Selected as Oral</span>;
+Conference on Machine Learning</em>. ICML. 2025, pp. 81185-81198 [<span
+style="color:red">Selected as Oral</span>; <a
+href="https://proceedings.mlr.press/v267/cullen25a.html">publisher
+link</a>; <a
+href="https://raw.githubusercontent.com/mlresearch/v267/main/assets/cullen25a/cullen25a.pdf">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('cullen2025position.bib', 'bibtex-cullen2025position')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
-<pre><code id="bibtex-cullen2025ddad">
-@inproceedings{cullen2025ddad,
+<pre><code id="bibtex-zhang2025one">
+@inproceedings{zhang2025one,
   title = {One Stone, Two Birds: Enhancing Adversarial Defense Through the Lens of Distributional Discrepancy},
   author = {Jiacheng Zhang and Benjamin I. P. Rubinstein and Jingfeng Zhang and Feng Liu},
   year = {2025},
   booktitle = {Proceedings of the 42nd International Conference on Machine Learning},
   series = {ICML},
-  note = {Accepted},
+  pages = {75951--75970},
 }
 </code></pre></div>
 
@@ -382,9 +385,13 @@ style="color:red">Selected as Oral</span>;
 <li>Zhang, Jiacheng, Benjamin I. P. Rubinstein, Jingfeng Zhang, and Feng
 Liu. “One Stone, Two Birds: Enhancing Adversarial Defense Through the
 Lens of Distributional Discrepancy”. In: <em>Proceedings of the 42nd
-International Conference on Machine Learning</em>. ICML. Accepted. 2025
-[<a href="https://arxiv.org/abs/2503.02169">PDF</a>;
-<a style="cursor: pointer;" onclick="DownloadToFile('cullen2025ddad.bib', 'bibtex-cullen2025ddad')">BibTeX</a>]</li>
+International Conference on Machine Learning</em>. ICML. 2025, pp.
+75951-75970 [<a
+href="https://proceedings.mlr.press/v267/zhang25bn.html">publisher
+link</a>; <a
+href="https://raw.githubusercontent.com/mlresearch/v267/main/assets/zhang25bn/zhang25bn.pdf">PDF</a>;
+<a href="https://github.com/tmlr-group/DAD">code</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('zhang2025one.bib', 'bibtex-zhang2025one')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -393,19 +400,20 @@ International Conference on Machine Learning</em>. ICML. Accepted. 2025
   author = {Shijie Liu and Andrew C. Cullen and Paul Montague and Sarah M. Erfani and Benjamin I. P. Rubinstein},
   title = {Multi-level Certified Defense Against Poisoning Attacks in Offline Reinforcement Learning},
   year = {2025},
-  note = {Accepted},
-  booktitle = {The Thirteenth International Conference on Learning Representations},
+  booktitle = {International Conference on Representation Learning},
   series = {ICLR},
+  pages = {44885--44905},
 }
 </code></pre></div>
 
 <ul>
 <li>Liu, Shijie, Andrew C. Cullen, Paul Montague, Sarah M. Erfani, and
 Benjamin I. P. Rubinstein. “Multi-level Certified Defense Against
-Poisoning Attacks in Offline Reinforcement Learning”. In: <em>The
-Thirteenth International Conference on Learning Representations</em>.
-ICLR. Accepted. 2025 [<a
-href="https://openreview.net/forum?id=X2x2DuGIbx">publisher link</a>;
+Poisoning Attacks in Offline Reinforcement Learning”. In:
+<em>International Conference on Representation Learning</em>. ICLR.
+2025, pp. 44885-44905 [<a
+href="https://proceedings.iclr.cc/paper_files/paper/2025/hash/6f1914617c7be6783314a45b180ae5b7-Abstract-Conference.html">publisher
+link</a>; <a href="https://openreview.net/forum?id=X2x2DuGIbx">PDF</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('liu2025multilevel.bib', 'bibtex-liu2025multilevel')">BibTeX</a>]</li>
 </ul>
 
@@ -415,7 +423,6 @@ href="https://openreview.net/forum?id=X2x2DuGIbx">publisher link</a>;
   title = {{RS-Reg}: {P}robabilistic and Robust Certified Regression Through Randomized Smoothing},
   author = {Aref Miri Rekavandi and Olga Ohrimenko and Benjamin I. P. Rubinstein},
   journal = {Transactions on Machine Learning Research},
-  note = {Accepted},
   year = {2025},
 }
 </code></pre></div>
@@ -424,8 +431,10 @@ href="https://openreview.net/forum?id=X2x2DuGIbx">publisher link</a>;
 <li>Rekavandi, Aref Miri, Olga Ohrimenko, and Benjamin I. P. Rubinstein.
 “RS-Reg: Probabilistic and Robust Certified Regression Through
 Randomized Smoothing”. In: <em>Transactions on Machine Learning
-Research</em> (2025). Accepted. [<a
-href="https://arxiv.org/abs/2405.08892">PDF</a>;
+Research</em> (2025). [<a
+href="https://openreview.net/forum?id=AcLlg4J52H">publisher link</a>; <a
+href="https://arxiv.org/abs/2405.08892">PDF</a>; <a
+href="https://github.com/arekavandi/Certified_Robust_Regression">code</a>;
 <a style="cursor: pointer;" onclick="DownloadToFile('rekavandi24rsreg.bib', 'bibtex-rekavandi24rsreg')">BibTeX</a>]</li>
 </ul>
 
@@ -435,7 +444,9 @@ href="https://arxiv.org/abs/2405.08892">PDF</a>;
   title = {{TUBA}: Cross-Lingual Transferability of Backdoor Attacks in {LLMs} with Instruction Tuning},
   author = {Xuanli He and Jun Wang and Qiongkai Xu and Pasquale Minervini and Pontus Stenetorp and Benjamin I. P. Rubinstein and Trevor Cohn},
   year = {2025},
+  pages = {16504–16544},
   booktitle = {Findings of the Association for Computational Linguistics: ACL 2025},
+  series = {ACL},
 }
 </code></pre></div>
 
@@ -444,8 +455,28 @@ href="https://arxiv.org/abs/2405.08892">PDF</a>;
 Stenetorp, Benjamin I. P. Rubinstein, and Trevor Cohn. “TUBA:
 Cross-Lingual Transferability of Backdoor Attacks in LLMs with
 Instruction Tuning”. In: <em>Findings of the Association for
-Computational Linguistics: ACL 2025</em>. 2025
-[<a style="cursor: pointer;" onclick="DownloadToFile('he2025tuba.bib', 'bibtex-he2025tuba')">BibTeX</a>]</li>
+Computational Linguistics: ACL 2025</em>. ACL. 2025, p. 16504–16544 [<a
+href="https://aclanthology.org/2025.findings-acl.848/">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2025tuba.bib', 'bibtex-he2025tuba')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-yan2025dynamiq">
+@misc{yan2025dynamiq,
+  title = {{DynamiQ}: Unlocking the Potential of Dynamic Task Allocation in Parallel Fuzzing},
+  author = {Wenqi Yan and Toby Murray and Benjamin I.P. Rubinstein and Van-Thuan Pham},
+  note = {arXiv:2510.04469 [cs.SE]},
+  year = {2025},
+  month = {Oct},
+}
+</code></pre></div>
+
+<ul>
+<li>Yan, Wenqi, Toby Murray, Benjamin I.P. Rubinstein, and Van-Thuan
+Pham. <em>DynamiQ: Unlocking the Potential of Dynamic Task Allocation in
+Parallel Fuzzing</em>. arXiv:2510.04469 [cs.SE]. Oct. 2025 [<a
+href="https://arxiv.org/abs/2510.04469">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('yan2025dynamiq.bib', 'bibtex-yan2025dynamiq')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
