WACV, Shijie & Calvin completions, some supervisee work updates

--- a/group.html
+++ b/group.html
@@ -312,34 +312,38 @@ Zhao</a> (2024– ). Differential privacy.</li>
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
-<li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie
-Liu</a>. (w Sarah Erfani, Paul Montague, Andrew Cullen 2021– ).
-Certified robustness at training time.</li>
-<li><a href="https://github.com/Dovermore">Zhuoqun (Calvin) Huang</a>.
-(w Olya Ohrimenko, Neil Marchant 2021– ). Certified robustness for
-discrete data.</li>
-<li><a href="https://jason-jiankai.github.io/">Jiankai Jin</a>. (w Olya
-Ohrimenko 2021– ). Systems security of differential privacy.</li>
 <li><a
 href="https://cis.unimelb.edu.au/people/students/jiacheng-zhang">Jiacheng
-Zhang</a>. (w Feng Liu 2023– ). Trustworthy ML.</li>
+Zhang</a>. (w Feng Liu 2023– ). Trustworthy AI.</li>
 <li><a
 href="https://cis.unimelb.edu.au/people/graduate-researchers/artificial-intelligence/maria-bulychev">Maria
 Bulychev</a>. (w Neil Marchant 2024– ). Watermarking GenAI and
 trustworthy AI.</li>
 <li><a
 href="https://www.linkedin.com/in/wenqi-yan-082a18223/?trk=people-guest_people_search-card&amp;originalSubdomain=au">Wenqi
-Yan</a>. (w Thuan Pham, Toby Murray 2024– ). Software fuzzing.</li>
+Yan</a>. (w Thuan Pham, Toby Murray 2024– ). Software fuzzing with
+LLMs.</li>
 <li><a
 href="https://www.linkedin.com/in/jiani-xie-a79a67152/?originalSubdomain=au">Jiani
-Xie</a>. (w Andrew Cullen 2025– ). Automatic speech recognition.</li>
+Xie</a>. (w Andrew Cullen 2025– ). Security of automatic speech
+recognition.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
+<li><a href="https://github.com/Dovermore">Zhuoqun (Calvin) Huang</a>.
+(w Olya Ohrimenko, Neil Marchant 2021–25). Certified robustness for
+discrete data → Quant at Jane Street</li>
+<li><a href="https://www.linkedin.com/in/shijie-liu-9162b8151/">Shijie
+Liu</a>. (w Sarah Erfani, Paul Montague, Andrew Cullen 2021-25).
+Certified robustness at training time → Postdoc at Univ Melbourne</li>
+<li><a href="https://www.linkedin.com/in/jin-jiankai-3a5750119/">Jiankai
+Jin</a>. (w Olya Ohrimenko 2021–25). Systems security of differential
+privacy.</li>
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun
-Wang</a>. (w Trevor Cohn 2020-25). Adversarial learning for NLP.</li>
+Wang</a>. (w Trevor Cohn 2020-25). Adversarial learning for NLP →
+Postdoc (Applied Scientist) at Amazon</li>
 <li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin
 Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020–24). Adversarial
 learning/game theory for autonomous systems → Data scientist at
@@ -414,13 +418,17 @@ Oxford</li>
 <li><a href="https://www.amilasilva.com/">Amila Silva</a> (postdoc
 2023–23). Multi-modal learning for human-AI teaming → Machine Learning
 Engineer, Canva</li>
+<li><a href="https://profiles.auckland.ac.nz/ni-ding">Ni Ding</a>
+(postdoc 2020-23). Information theory for privacy → Lecturer, Univ
+Auckland, New Zealand</li>
 <li><a
 href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal
 Weerasinghe</a> (postdoc 2019–21). Adversarial machine learning → Energy
 and Forecasting Analyst, ZEN Energy (startup)</li>
 <li><a
 href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei
-Gelbhart</a> (student 2019–21). Robustness in machine learning.</li>
+Gelbhart</a> (student 2019–21). Robustness in machine learning → Applied
+Scientist, Amazon, Haifa.</li>
 <li><a href="https://changxu.io/">Chang Xu</a> (postdoc 2020–21).
 Adversarial learning for NLP → Data Scientist, News Corp, Sydney.</li>
 <li><a href="https://shuozhou.github.io/">Shuo Zhou</a> (postdoc w
