Google grant AI DBs

--- a/impact.html
+++ b/impact.html
@@ -802,10 +802,13 @@ Futures strategic plan</a>.</p>
 <div id="funding" class="section level3">
 <h3>Funding</h3>
 <p>Since arriving at the University of Melbourne Oct 2013, I have been
-awarded competitive funding (Cat 1–4) of <strong>$11.6m total</strong>,
-<strong>$7.45m as lead-CI</strong>, $3.39m on a per-CI basis. Funding
+awarded competitive funding (Cat 1–4) of <strong>$11.75m total</strong>,
+<strong>$7.45m as lead-CI</strong>, $3.46m on a per-CI basis. Funding
 includes:</p>
 <ul>
+<li>2025–2026 <strong>$150k: Google</strong> Research Funding Agreement,
+<em>From Data to Rapid Insights with Intelligent AI-Powered
+Databases</em>, Renata Borovica-Gajic, Benjamin Rubinstein.</li>
 <li>2025–2028 <strong>$659k: Office of National Intelligence</strong>
 National Intelligence Discovery Grants 2025, Olga Ohrimenko, Renata
 Borovica-Gajic, Benjamin Rubinstein.</li>
