--- a/pubs.html
+++ b/pubs.html
@@ -365,7 +365,9 @@ href="https://arxiv.org/abs/2405.13375">PDF</a>;
 <li>Huang, Zhuoqun, Neil G. Marchant, Olga Ohrimenko, and Benjamin I. P.
 Rubinstein. “AdaptDel: Adaptable Deletion Rate Randomized Smoothing for
 Certified Robustness”. In: <em>Advances in Neural Information Processing
-Systems</em>. NeurIPS. Accepted. 2025 [<a style="cursor: pointer;" onclick="DownloadToFile('huang2025adaptdel.bib', 'bibtex-huang2025adaptdel')">BibTeX</a>]</li>
+Systems</em>. NeurIPS. Accepted. 2025 [<a
+href="https://arxiv.org/abs/2511.09316">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('huang2025adaptdel.bib', 'bibtex-huang2025adaptdel')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
