Enterprise AI book chapter

--- a/pubs.html
+++ b/pubs.html
@@ -486,6 +486,27 @@ link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2025tuba.bib', 
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2025data">
+@incollection{marchant2025data,
+  title = {Data Privacy in Enterprise {AI}},
+  author = {Neil G. Marchant and Ying Zhao and Benjamin I. P. Rubinstein and Olga Ohrimenko},
+  booktitle = {Enterprise {AI}},
+  editor = {Shazia Sadiq},
+  pages = {129--181},
+  year = {2025},
+  publisher = {Springer},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G., Ying Zhao, Benjamin I. P. Rubinstein, and Olga
+Ohrimenko. “Data Privacy in Enterprise AI”. In: <em>Enterprise AI</em>.
+Ed. by Shazia Sadiq. Springer, 2025, pp. 129-181 [<a
+href="https://link.springer.com/chapter/10.1007/978-3-032-01940-0_5">publisher
+link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2025data.bib', 'bibtex-marchant2025data')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-yan2025dynamiq">
 @misc{yan2025dynamiq,
   title = {{DynamiQ}: Unlocking the Potential of Dynamic Task Allocation in Parallel Fuzzing},
