--- a/group.html
+++ b/group.html
@@ -340,7 +340,7 @@ Liu</a>. (w Sarah Erfani, Paul Montague, Andrew Cullen 2021-25).
 Certified robustness at training time → Postdoc at Univ Melbourne</li>
 <li><a href="https://www.linkedin.com/in/jin-jiankai-3a5750119/">Jiankai
 Jin</a>. (w Olya Ohrimenko 2021–25). Systems security of differential
-privacy.</li>
+privacy → Senior AI Security Research Engineer at 360 Security</li>
 <li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun
 Wang</a>. (w Trevor Cohn 2020-25). Adversarial learning for NLP →
 Postdoc (Applied Scientist) at Amazon</li>
