--- a/pubs.html
+++ b/pubs.html
@@ -322,8 +322,9 @@ are <a href="impact.html#policy_submissions">here</a>.</p>
 <li>Bulychev, Maria, Neil G. Marchant, and Benjamin I. P. Rubinstein.
 “Where is the Watermark? Interpretable Watermark Detection at the Block
 Level”. In: <em>Proceedings of the Winter Conference on Applications of
-Computer Vision</em>. WACV. Accepted. 2026
-[<a style="cursor: pointer;" onclick="DownloadToFile('bulychev2026where.bib', 'bibtex-bulychev2026where')">BibTeX</a>]</li>
+Computer Vision</em>. WACV. Accepted. 2026 [<a
+href="https://arxiv.org/abs/2512.14994">PDF</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('bulychev2026where.bib', 'bibtex-bulychev2026where')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
