--- a/pubs.html
+++ b/pubs.html
@@ -483,7 +483,8 @@ Cross-Lingual Transferability of Backdoor Attacks in LLMs with
 Instruction Tuning”. In: <em>Findings of the Association for
 Computational Linguistics: ACL 2025</em>. ACL. 2025, p. 16504–16544 [<a
 href="https://aclanthology.org/2025.findings-acl.848/">publisher
-link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2025tuba.bib', 'bibtex-he2025tuba')">BibTeX</a>]</li>
+link</a>; <a href="https://github.com/xlhex/tuba_acl2025">code</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('he2025tuba.bib', 'bibtex-he2025tuba')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -548,7 +549,9 @@ alpha-Smoothing for Regression Models”. In: <em>Advances in Neural
 Information Processing Systems</em>. NeurIPS. 2024, pp. 134127-134150
 [<a
 href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/f21a76d688be0553c943a6b6c1d4bb1f-Abstract-Conference.html">publisher
-link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rekavandi2024certified.bib', 'bibtex-rekavandi2024certified')">BibTeX</a>]</li>
+link</a>; <a
+href="https://github.com/arekavandi/Certified_adv_RRegression/">code</a>;
+<a style="cursor: pointer;" onclick="DownloadToFile('rekavandi2024certified.bib', 'bibtex-rekavandi2024certified')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
